--- a/ecard.html
+++ b/ecard.html
@@ -12,7 +12,7 @@
         <h1>Happy 4th Month Anniversary, Ankita!</h1>
         <div id="message" class="heart-shape">
             <p>Ankita,</p>
-            <p>These past four months have been the most wonderful time of my life. Your love and support mean everything to me. I look forward to many more months and years together. I love you!</p>
+            <p>These past four months have been the most wonderful time of my life. Your love and support mean everything to me. I look forward to many more months and years together. I love you so muchh!</p>
             
         </div>
         <button onclick="redirect()">Click Me</button>
