--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="card">
-        <h1>Happy 4th Month Anniversary, Ankita!</h1>
+        <h1>Happy 4 months of us, Ankita!</h1>
         <div id="message" class="heart-shape">
-            <p>Ankita,</p>
-            <p>These past four months have been the most wonderful time of my life. Your love and support mean everything to me. I look forward to many more months and years together. I love you so muchh!</p>
+            <p>darling,</p>
+            <p>These past four months have been the most wonderful time of my life. Your love and support mean everything to me. If I was a fish and you were the land, I would never swim in the sea. Instead, I would die on your sand. I love you so muchh!</p>
             
         </div>
-        <button onclick="redirect()">Click Me</button>
+        <button onclick="redirect()">touch Me <3</button>
     </div>
     <script>
         function redirect() {
