--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
         <h1>Happy 4 months of us, Ankita!</h1>
         <div id="message" class="heart-shape">
-            <p>darling,</p>
+            <p>Darling,</p>
             <p>These past four months have been the most wonderful time of my life. Your love and support mean everything to me. If I was a fish and you were the land, I would never swim in the sea. Instead, I would die on your sand. I love you so muchh!</p>
             
         </div>
