--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalized E-Card</title>
+    <title>i love you</title>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Gothic+A1:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style2.css">
 </head>
@@ -12,7 +12,7 @@
         <h1>Happy 4 months of us, Ankita!</h1>
         <div id="message" class="heart-shape">
             <p>Darling,</p>
-            <p>These past four months have been the most wonderful time of my life. Your love and support mean everything to me. If I was a fish and you were the land, I would never swim in the sea. Instead, I would die on your sand. no matter what happens just remember you're my sweet girl and l'l always love you through anything and everything, you're my soulmate, my other half, my best friend and my girlfriend all in one. words cannot explain how much i appreciate you and care for you. I love you baby I love you so muchh!</p>
+            <p>These past four months was heaven for me. Your love and support mean everything to me. If I was a fish and you were the land, I would never swim in the sea. Instead, I would die on your sand. no matter what happens just remember you're my sweet girl and l'l always love you through anything and everything, you're my soulmate, my other half, my best friend and my girlfriend all in one. words cannot explain how much i appreciate you and care for you. I love you baby I love you so muchh!</p>
             
         </div>
         <button onclick="redirect()">touch Me <3</button>
